--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "axios": "^0.27.2",
     "mdb-react-ui-kit": "^4.1.0",
     "mdb-ui-kit": "^4.4.0",
     "react": "^18.2.0",
