--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
+    "eslint": "5.6.0",
     "mdb-react-ui-kit": "^4.1.0",
     "mdb-ui-kit": "^4.4.0",
     "moment": "^2.29.4",
