--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-moment": "^1.1.2",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
+    "serve": "^14.1.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
